@@ -53,10 +53,11 @@ left  |  right        ←  →          │     │
 					<li>Show channel labels: If checked, channel preset will be shown on the left side.</li>
 					<li>Show particles: Whether to draw particles. Very resource-intensive!</li>
 					<li>Horizontal Visualization: Uses a horizontal visualization style. Overrides everything above except 3D Notes.</li>
-					<li>View distance: This option affects the maximum number of notes rendered on the screen.</li>
+					<li>2D Visualization: Tick this to use a simple 2D visualization instead. Much less resource-demanding.</li>
+					<li>View distance: This option affects the maximum number of notes rendered on the screen. Only applies to 3D visualization.</li>
 					<li>Note stretch: The length multiplier of notes.</li>
 					<li>Minimum note length: Avoid notes that are too short to be visible by adjusting this value.</li>
-					<li>Chequer board tint: change the color of the chequer board background.</li>
+					<li>Chequer board tint (AARRGGBB): change the color of the chequer board background.</li>
 					<li>Background Image: Use a background image instead of the default dull grey color.</li>
 				</ul>
 			</li>
@@ -70,6 +71,7 @@ left  |  right        ←  →          │     │
 					<li>Supersampling: Supersample anti-aliasing. 1 means no SSAA.</li>
 					<li>Multisampling: Multisample anti-aliasing. 0 means no MSAA.</li>
 					<li>FOV: Field of view.</li>
+					<li>OSD Position: Change position of the on screen display, or just disable it.</li>
 				</ul>
 			</li>
 		</ul>
