@@ -2,7 +2,7 @@
 #define QMPHELPWINDOW_H
 
 #include <QDialog>
-#define APP_VERSION "0.8.1"
+#define APP_VERSION "0.8.2"
 
 namespace Ui {
 	class qmpHelpWindow;
